# hwpmine

./: .env.example  .gitignore  README.md  build.bat  config.py  extractor_gui.py  inserter.py  install.bat  make_release.py  pyinstaller_entry.py  pyproject.toml  requirements.txt  run.py  run.pyw  scanner.py  search_gui.py  test_hwp_com.py  test_pdf_open.py  환경설정.txt
.claude/: settings.local.json
src/docmine/: __init__.py  __main__.py  about.py  cli.py  config.py  extractor_gui.py  hwp_parser.py  inserter.py  pdf_inserter.py  pdf_parser.py  scanner.py  search_gui.py  unified_gui.py
src/hwpmine/: __init__.py  cli.py  config.py  drive_picker.py  extractor_gui.py  icon.py  inserter.py  pdf_inserter.py  scanner.py  search_gui.py  unified_gui.py
